# FlightManager

./: README.md  airline.db  main.py  pyproject.toml
models/: airports.py  db.py  flight.py  pilot.py
src/flight_manager/: main.py
src/flight_manager/models/: airports.py  db.py  flight.py
src/flight_manager/views/: airport_menus.py  flight_menus.py  menu.py  pilot_menus.py
views/: airport_menus.py  flight_menus.py  pilot_menus.py
